--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "express": "^4.17.1",
     "ngx-loading": "^8.0.0",
+    "ngx-star-rating": "0.0.1",
     "path": "^0.12.7",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
